# aoc-2020

./: Cargo.toml  readme.md
src/: bags.rs  boarding.rs  bus.rs  customs.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  docking.rs  expense_report.rs  game_console.rs  jolts.rs  lib.rs  map.rs  mem_game.rs  passport.rs  password.rs  seating.rs  ship.rs  train_tickets.rs  xmas.rs
