[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Oskar Thornblad <oskar.thornblad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
regex = "1"
anyhow = "*"
